# melody_markov

./: .coveragerc  .gitignore  .pylintrc  README.md  pyproject.toml  tasks.py
abc-notes/: aird-v1.abc  aird-v2.abc  aird-v3.abc  aird-v4.abc  aird-v5.abc  aird-v6.abc  atalanta.abc  bawdytunes.abc  blaikie.abc  branles.abc  chalumeau.abc  clarkson.abc  colonial.abc  edinbal.abc  edinburghklezmer.abc  flodden.abc  gskene.abc  halloween.abc  highlandfair.abc  lamentforthebishopofargyll.abc  lismore.abc  malcolmdouglas.abc  mckay.abc  mclennan.abc  scotsguitar.abc  scottishsessiontunes.abc  youpnannetted.abc
docs/: d_08b4cb1648a15a99___init___py.html  d_08b4cb1648a15a99_trie_test_py.html  d_330d13901b3cda70___init___py.html  d_330d13901b3cda70_markov_logic_py.html  d_330d13901b3cda70_note_logic_py.html  d_330d13901b3cda70_trie_logic_py.html  d_a44f0ac069e85531___init___py.html  d_a44f0ac069e85531_markov_test_py.html  d_a44f0ac069e85531_note_test_py.html  d_a44f0ac069e85531_trie_test_py.html  d_ea15d1ede4aa1a4a___init___py.html  d_ea15d1ede4aa1a4a_trie_logic_py.html  index.html  status.json
documentation/: implementation_report.md  progress_report_week5.md  progress_report_week_1.md  progress_report_week_2.md  progress_report_week_3.md  progress_report_week_4.md  progress_report_week_5.md  progress_report_week_6.md  project_definition.md  testing.md
htmlcov/: d_08b4cb1648a15a99___init___py.html  d_90cd5cccf28a4741_play_abc_py.html  d_ea15d1ede4aa1a4a___init___py.html  d_ea15d1ede4aa1a4a_note_logic_py.html  d_ea15d1ede4aa1a4a_trie_logic_py.html  index.html  status.json
(+27 files in other folders)
