[tool.poetry]
name = "melody_markov"
version = "0.1.0"
description = ""
authors = ["Anu Virtanen <virtanenanum@gmail.com>"]

[tool.poetry.dependencies]
python = "=3.9"
pytest = "^7.2.2"
sounddevice = "^0.4.6"
scipy = "^1.10.1"
soundfile = "^0.12.1"
aubio = "^0.4.9"
music21 = "^8.1.0"
pygame = "^2.3.0"
pylint = "^2.17.1"
coverage = "^7.2.2"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
